# sotc

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile.am  README.md  README.rst  TODO  configure.ac
doc/: demo_model.sotc  sb.mdj
include/sotc/: model.h  sotc.h  stack.h
include/tcm/: model.h  stack.h  state.h  tcm.h
lib/: Makefile.am  file.c  model.c  region.c  sotc.c  sotc.pc.in  stack.c  state.c  tcm.c  transition.c
old/src/: Makefile  demo.c  main.c  sb.xmi  sb_machine.c  sb_machine.h
old/src/gui/: component.c  menu.c
old/src/include/sb/: sb.h
old/src/include/sb/gui/: component.h  grid.h  state.h
src/: Makefile  Makefile.am  demo.c  main.c  object_tree.c  object_tree.h  render.c  render.h  sb.xmi  sb_machine.c  sb_machine.h  state_canvas.c  state_canvas.h
src/canvas/: color.c  controller.c  controller.h  grid.c  region.c  selection.c  state.c  transition.c  view.c  view.h
src/gui/: component.c  grid.c  menu.c  state.c
src/include/sb/: sb.h
src/include/sb/gui/: component.h  grid.h  menu.h  state.h
test/: Makefile.am  common.c  common.h  test1.c  test1.sotc  test1.tcm  test2.sotc  test2.tcm  test_actions.c  test_empty_root.sotc  test_empty_root.tcm  test_load_transitions.sotc  test_model.c  test_stack.c  test_transitions.c
